# filplus-backend

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  deployment.sh  gh-private-key.pem  new-infra-roadmap.md  pr-flow.md
.github/: test_issue.yml
.github/workflows/: build-docker-image.yml  code-check.yml  deploy-new-version.yml  deploy.test  deploy.yml  deploy_test.yml  deploy_to_prod.yml  deploy_to_staging.yml  deploy_v1.yml  deploy_v2.test  deploy_v2.yml  end_to_end_tests.yml  manually-trigger-deploy.yml  pr_check.yml  publish-new-build.yml  put-ssm-version-deploy.yml  release-new-version.yml  rust.yml  staging_ci_cd.yml  test_deploy.yml  test_issue.yml  test_pr.yml
ci/scripts/: check-and-change-image.js
database/: Cargo.toml
database/src/core/collections/: rkh.rs
fplus/: Cargo.toml
fplus-cli/: Cargo.toml  README.MD
fplus-cli/src/: main.rs  validators.rs
fplus-database/: Cargo.toml  README.MD
fplus-database/src/: config.rs  lib.rs  types.rs
fplus-database/src/core/: setup.rs
fplus-database/src/core/collections/: govteam.rs  logs.rs  mod.rs  notary.rs  rkh.rs
fplus-database/src/database/: allocation_amounts.rs  allocators.rs  applications.rs  autoallocations.rs  comparable_applications.rs  mod.rs  rkh.rs
fplus-database/src/models/: allocation_amounts.rs  allocators.rs  applications.rs  autoallocations.rs  blockchain.rs  clients.rs  comparable_applications.rs  datacap.rs  mod.rs  prelude.rs  rkh.rs  users.rs
fplus-http-server/: Cargo.toml  Dockerfile
fplus-http-server/src/: main.rs
fplus-http-server/src/auth/: gh_handle_auth.rs  mod.rs
fplus-http-server/src/middleware/: gh_auth.rs  mod.rs  rkh_auth.rs  signature_reader.rs  verifier_auth.rs
fplus-http-server/src/router/: allocator.rs  application.rs  autoallocator.rs  blockchain.rs  govteam.rs  logs.rs  mod.rs  notary.rs  rkh.rs  verifier.rs
fplus-lib/: Cargo.toml  README.MD
fplus-lib/src/: base64.rs  config.rs  error.rs  helpers.rs  lib.rs  parsers.rs
fplus-lib/src/core/: mod.rs
fplus-lib/src/core/allocator/: file.rs  mod.rs
fplus-lib/src/core/application/: allocation.rs  allocations.rs  client.rs  core_info.rs  datacap.rs  file.rs  gitcoin_interaction.rs  lifecycle.rs  mod.rs  project.rs  signature_reader.rs  sps_change.rs
fplus-lib/src/core/autoallocator/: file.rs  metaallocator_interaction.rs  mod.rs
fplus-lib/src/core/rkh/: auth.rs  mod.rs
fplus-lib/src/external_services/: blockchain.rs  dmob.rs  filecoin.rs  github.rs  mod.rs  similarity_detection.rs
fplus-lib/src/models/: dmob.rs  filecoin.rs  mod.rs
fplus/src/: main.rs  validators.rs
http-server/: Cargo.toml  Dockerfile
http-server/src/: main.rs
http-server/src/db/: common.rs  mod.rs
http-server/src/db/collections/: logs.rs  mod.rs  notary.rs  rkh.rs
http-server/src/router/: application.rs  blockchain.rs  logs.rs  mod.rs  notary.rs  rkh.rs
lib/: Cargo.toml  deployment.sh
lib/src/core/: mod.rs
lib/src/core/application/: allocations.rs  core_info.rs  lifecycle.rs
lib/src/external_services/: github.rs
manual-migrations/: 2024-07-12.sql  2024-07-23.sql  2024-08-30.sql  2024-10-16.sql  2024-10-18.sql  2025-01-22.sql  2025-01-31.sql  2025-04-01.sql  2025-04-22.sql
src/: b64.rs  main.rs  parsers.rs
src/core/: mod.rs
src/core/application/: allocations.rs  mod.rs
src/db/: setup.rs
src/external_services/: blockchain.rs  github.rs
src/router/: application.rs  blockchain.rs  mod.rs
