[package]
name = "fplus-cli"
authors = ["jbesraa", "kokal33"]
version = "0.1.1"
edition = "2021"
description = "FPlus cli tool to validate different states of an application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/filplus-backend/tree/main/fplus-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = {  version = "4.4.6", features = ["derive"] }
fplus-database = "0.1.1"
fplus-lib = "0.1.1"
mongodb = "2.7.0"
