[package]
name = "fplus-database"
authors = ["clriesco", "kokal33", "alexmcon"]
version = "1.8.4"
edition = "2021"
description = "FPlus main database module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/filplus-backend/tree/publish-to-crates/fplus-database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
sea-orm ={ version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
anyhow = "1.0.75"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
chrono = "0.4.26"
once_cell = "1.8"
serde = { version =  "1.0.164", features = ["derive", "std",
"serde_derive", "alloc", "rc"] } 
serial_test = "3.0.0"
sha1 = "0.10.6"
serde_json = "1.0.96"
alloy = { version = "0.3.2", features = ["signers"] }
sea-orm-newtype = "0.0.1"
