[package]
name = "fplus-http-server"
authors = ["jbesraa", "kokal33", "clriesco"]
version = "2.2.9"
description = "FPlus main http module"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
actix-web = "4.3.1"
actix-utils = "3.0.1"
serde = { version =  "1.0.164", features = ["derive", "std",
"serde_derive", "alloc", "rc"] } 
tokio = { version = "1.29.1", features = ["full"] }
env_logger = "0.10.0"
serde_json = "1.0.96"
chrono = "0.4.26"
actix-cors = "0.6.4"
reqwest = { version = "0.11.18", features = ["json"] }
futures = "0.3.28"
dotenv = "0.15.0"
fplus-lib = { path = "../fplus-lib", version = "2.2.9" }
fplus-database = { path = "../fplus-database", version = "2.2.9" }
anyhow = "1.0.75"
async-trait = "0.1.73"
uuidv4 = "1.0.0"
log = "0.4.20"
cron = "0.12.1"
