[package]
name = "fplus-lib"
authors = ["jbesraa", "kokal33"]
version = "0.1.3"
edition = "2021"
description = "FPlus library/helper files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/filplus-backend/tree/main/fplus-lib"
readme = "README.MD"

[dependencies]
dotenv = "0.15.0"
http = "0.2.9"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
jsonwebtoken = "8.3.0"
octocrab = "0.25.1"
serde = { version =  "1.0.164", features = ["derive", "std",
"serde_derive", "alloc", "rc"] } 
env_logger = "0.10.0"
actix-web = "4.3.1"
markdown = "1.0.0-alpha.9"
serde_json = "1.0.96"
chrono = "0.4.26"
base64 = "0.13"
reqwest = { version = "0.11.18", features = ["json"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
uuidv4 = "1.0.0"
