[package]
name = "fplus-lib"
authors = ["jbesraa", "kokal33", "clriesco"]
version = "1.8.4"
edition = "2021"
description = "FPlus library/helper files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/filplus-backend/tree/main/fplus-lib"
readme = "README.MD"

[dependencies]
dotenv = "0.15.0"
http = "0.2.9"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
jsonwebtoken = "8.3.0"
octocrab = "0.26.0"
serde = { version =  "1.0.164", features = ["derive", "std",
"serde_derive", "alloc", "rc"] } 
env_logger = "0.10.0"
actix-web = "4.3.1"
markdown = "1.0.0-alpha.9"
serde_json = "1.0.96"
chrono = {version = "0.4.26", features = ["serde"] }
base64 = "0.13"
reqwest = { version = "0.11.18", features = ["json"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
uuidv4 = "1.0.0"
rayon = "1.8.0" 
log = "0.4.20"
once_cell = "1.19.0"
fplus-database = { path = "../fplus-database", version = "1.8.4"}
pem = "1.0"
anyhow = "1.0"
regex = "1.0"
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = [
    "signers",
    "providers",
    "node-bindings",
    "sol-types",
    "json",
    "network",
    "rpc-types-eth",
    "provider-http",
    "dyn-abi",
    "eip712",
] }
tempfile = "3.10.1"
size = "0.5.0-preview2"

[dev-dependencies]
actix-rt = "2.9.0"

[features]
online-tests = []
