[package]
name = "fplus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = {  version = "4.4.6", features = ["derive"] }
database = { path = "../database" }
mongodb = "2.7.0"
