[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
http = "0.2.9"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
jsonwebtoken = "8.3.0"
octocrab = "0.25.1"
serde = { version =  "1.0.164", features = ["derive", "std",
"serde_derive", "alloc", "rc"] } 
env_logger = "0.10.0"
actix-web = "4.3.1"
markdown = "1.0.0-alpha.9"
serde_json = "1.0.96"
chrono = "0.4.26"
base64 = "0.13"
reqwest = { version = "0.11.18", features = ["json"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
